--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-	"name": "react_task",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"start": "react-scripts start",
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"author": "BigBrosh",
-	"license": "ISC",
-	"dependencies": {
-		"react": "^16.2.0",
-		"react-dom": "^16.2.0",
-		"react-router": "^4.2.0"
-	},
-	"devDependencies": {
-		"babel-core": "^6.26.0",
-		"babel-loader": "^7.1.4",
-		"babel-preset-es2015": "^6.24.1",
-		"babel-preset-react": "^6.24.1",
-		"html-webpack-plugin": "^3.1.0",
-		"webpack": "^3.1.0",
-		"webpack-cli": "^2.0.13"
-	}
+  "name": "react_task",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "react-scripts start",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "BigBrosh",
+  "license": "ISC",
+  "dependencies": {
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "html-webpack-plugin": "^3.1.0",
+    "webpack": "^3.1.0",
+    "webpack-cli": "^2.0.13"
+  }
 }
