--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "html-webpack-plugin": "^3.1.0",
+    "image-webpack-loader": "^4.2.0",
     "webpack": "^3.1.0",
     "webpack-cli": "^2.0.13"
   }
